--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 
-script: "cd Projektgruppe/src; javac tdti/TDTI.java; javac cima/CIMA.java;"
+script: "cd Projektgruppe/src; javac tdti/TDTI.java;"
 
 notifications:
   slack: unibn:5KBFpn0eCNXCXKPxWOI1gGYo
