--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,35 @@ local.properties
 
 # TeXlipse plugin
 .texlipse
+
+
+
+# TeX/LaTeX intermediates # 
+########################### 
+*.*~ 
+*.aux 
+*.log 
+*.tmp 
+*.xref 
+*.pdx 
+*.pnd 
+*.bbl 
+*.bcf 
+*.auto 
+*.blg 
+*.dvi 
+*.glo 
+*.out 
+*.idx 
+*.ilg 
+*.ind 
+*.idv 
+*.4ct 
+*.4tc 
+*.lg 
+*.xmpi 
+*.tcp 
+*.toc 
+*.tps 
+*blx.bib 
+*.run.xml
